--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "./node_modules/nodemon/bin/nodemon.js start.js",
-    "dev win": "./node_modules/.bin/nodemon start.js"
+    "devTest": "./node_modules/.bin/nodemon start.js"
   },
   "author": "",
   "license": "ISC",
